force-app/main/default/objects/Clienteling_Config__c/Clienteling_Config__c.object-meta.xml
<CustomObject>
    <label>Clienteling Config</label>
    <nameField>
        <label>Clienteling Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clienteling Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>