force-app/main/default/objects/Clienteling_Config__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <inlineHelpText>Name of the static resource you uploaded the image to.</inlineHelpText>
    <label>Logo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>