force-app/main/default/objects/Clienteling_Config__c/fields/Logo_Height__c.field-meta.xml
<CustomField>
    <fullName>Logo_Height__c</fullName>
    <inlineHelpText>Number in px&apos;s - i.e. &apos;40&apos;</inlineHelpText>
    <label>Logo Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>