force-app/main/default/objects/Clienteling_Config__c/fields/Logo_Width__c.field-meta.xml
<CustomField>
    <fullName>Logo_Width__c</fullName>
    <inlineHelpText>Number in px&apos;s - e.g. &apos;200&apos;</inlineHelpText>
    <label>Logo Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>